--- a/app/views/static_pages/auto-accidents.html.erb
+++ b/app/views/static_pages/auto-accidents.html.erb
@@ -9,6 +9,7 @@
 </div>
 
 <div class="main-body">
+	<div class="inner">
 	<div class="container">
 		<table class="boxes">
 			<tbody>
@@ -43,6 +44,7 @@
 				</tr>
 			</tbody>
 		</table>
+	</div>
 	</div>
 </div>
 
