--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,27 +2,80 @@
 <% @page_description = "New Subject" %>
 
 
-<div class="contactpage">
+<!-- <div class="contactpage">
   <div class="pa-header">
       <div class="overlay">
           <div class="title-box">
               <h1>Contact Us</h1>
           </div>
       </div>
-  </div>
+  </div> -->
 
-  <div class="main-wrap">
-    <div class="body-content">
-      <div class="s1">
+<div class="inside-sec">
+  <div class="cst-header">
+    <div class="inner">
+      <h1>Contact Noel B. Leonard</h1>
+      <div class="title-line"></div>
+      <div class="clearfix"></div>
+      <h3>Attorney, LLC</h3>
+      <div class="contact-info">
+        <div class="col-md-4"><h4 class="call"><%= number_to_phone(2519438638, delimiter: '-') %></h4></div>
+
         <div class="col-md-4">
-          <p>Contact Noel B. Leonard today to discuss your personal injury, auto accident, or 18 wheeler accident injury claim for Baldwin, Mobile, or Escambia Counties Alabama.</p>
+          <h4 class="address">218 N. Alston Street<br> Foley, AL 36535</h4>
         </div>
 
-				<div class="col-md-8">
-					<div class="siteorigin-widget-tinymce textwidget">
+        <div class="col-md-4">
+          <ul class="social-links">
+            <li>
+              <%= link_to '/fb', target: '_blank' do %>
+                <i class="fa fa-facebook"></i>
+              <% end %>
+            </li>
+
+            <li>
+              <%= link_to '/twitter', target: '_blank' do %>
+                <i class="fa fa-twitter"></i>
+              <% end %>
+            </li>
+
+            <li>
+              <%= link_to '/linkedin', target: '_blank' do %>
+                <i class="fa fa-linkedin"></i>
+              <% end %>
+            </li>
+
+            <li>
+              <%= link_to '/twitter', target: '_blank' do %>
+                <i class="fa fa-twitter"></i>
+              <% end %>
+            </li>
+
+            <li>
+              <%= link_to '/youtube', target: '_blank' do %>
+                <i class="fa fa-youtube"></i>
+              <% end %>
+            </li>
+          </ul>
+        </div>
+      </div>
+        <!-- <hr class="fancy"> -->
+        <!-- <h4 class="open">"Accidents happen...but finding the right attorney doesn't happen by accident."</h4> -->
+        <!-- <p>Noel B. Leonard, Attorney LLC is located in Foley, Alabama, and represent clients from <span>Mobile</span>, <span>Baldwin</span>, and <span>Escambia</span> counties.</p> -->
+    </div>
+  </div>
+
+    <div class="s2">
+      <div class="banner">
+          <p>If you live in <span>Mobile</span>, <span>Baldwin</span>, or <span>Escambia</span> county, and suffer from an injury as a result of a motorcycle, automotive, or 18-wheeler accident, contact Noel B. Leonard today to discuss your options. Fill out our Case Evaluation Form below, or call us now, to schedule a consultation.</p>
+      </div>
+
+
+      <div class="container">
+        <div class="col-md-8 col-md-offset-2 form">
+          <div class="siteorigin-widget-tinymce textwidget">
             <div id="wufoo-zj0erzt178k0t4"><iframe id="wufooFormzj0erzt178k0t4" class="wufoo-form-container" height="821" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none" src="https://vincidesigns.wufoo.com/embed/zj0erzt178k0t4/def/embedKey=zj0erzt178k0t4277622&amp;entsource=wordpress&amp;referrer=http%3Awuslashwuslashwww.attorney-leonard.comwuslashabout-uswuslash&amp;header=hide"><a href="https://vincidesigns.wufoo.com/forms/zj0erzt178k0t4/" title="html form">Fill out my Wufoo form!</a></iframe></div></div>
         </div>
       </div>
-   	</div>
+    </div>
   </div>
-</div>
