--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -3,7 +3,7 @@
 
 <div class="cst-header">
 	<h1>Useful Resources</h1>
-	<h4>Links and Websites You Can Use</h4>
+	<!-- <h4>Links and Websites You Can Use</h4> -->
 </div>
 <div class="clearfix"></div>
 
@@ -11,6 +11,7 @@
 	<div class="col-md-6">
 		<div class="list">
 			<h3 class="tmargin0">Alabama State Judicial &amp; Legal Resources</h3>
+			<hr class="fancy"><div class="clearfix"></div>
 				<p><a href="http://judicial.alabama.gov/" class="res-link" target="_blank">Alabama Judicial System</a></p>
 				<p><a href="http://judicial.alabama.gov/supreme.cfm" class="res-link" target="_blank">Supreme Court of Alabama</a></p>
 				<p><a href="http://judicial.alabama.gov/civil.cfm" class="res-link" target="_blank">Alabama Court of Civil Appeals</a></p>
@@ -28,6 +29,7 @@
 
 		<div class="list">
 			<h3>Baldwin County Resources</h3>
+			<hr class="fancy"><div class="clearfix"></div>
 				<p><a href="http://baldwincountyal.gov/departments/planning-zoning/planning-and-zoning-ordinances" class="res-link" target="_blank">Baldwin County Zoning Ordinances</a></p>
 				<p><a href="http://baldwincountyal.gov/departments/planning-zoning" class="res-link" target="_blank">Baldwin County Planning &amp; Zoning Department</a></p>
 				<p><a href="http://baldwincountyal.gov/Goverment/revenue/local-law-index" class="res-link" target="_blank">Baldwin County – Local Laws Index</a></p>
@@ -40,12 +42,14 @@
 	<div class="col-md-6">
 		<div class="list">
 			<h3 class="tmargin0">Escambia County Resources</h3>
+			<hr class="fancy"><div class="clearfix"></div>
 				<!-- <a href="http://www.co.escambia.al.us/court.html" class="res-link" target="_blank" class="broken_link">Escambia County Courts</a> -->
 				<p><a href="http://www.towncourtlisting.com/wiki/index.php?title=21st_Judicial_Circuit_of_Alabama_-_Escambia_County_Courthouse,_Escambia_County,_Alabama" class="res-link" target="_blank">Escambia County Judicial Circuit</a></p>
 		</div>
 
 		<div class="list">
 			<h3>Mobile County Resources</h3>
+			<hr class="fancy"><div class="clearfix"></div>
 				<p><a href="http://probate.mobilecountyal.gov/" class="res-link" target="_blank">Mobile County Probate Court</a></p>
 				<p><a href="http://www.alsd.uscourts.gov/" class="res-link" target="_blank">United States District Court – Southern District of Alabama</a></p>
 				<p><a href="https://www.municode.com/library/al/mobile/codes/code_of_ordinances" class="res-link" target="_blank">Mobile County Ordinances</a></p>
@@ -53,18 +57,21 @@
 
 		<div class="list">
 			<h3>City of Foley Resources</h3>
+			<hr class="fancy"><div class="clearfix"></div>
 				<p><a href="https://www.municode.com/library/al/foley/codes/code_of_ordinances" class="res-link" target="_blank">City of Foley – Code of Ordinances</a></p>
 				<p><a href="http://www.cityoffoley.org/CityServices/PoliceDepartment.aspx" class="res-link" target="_blank">City of Foley PD</a></p>
 		</div>
 
 		<div class="list">
 			<h3>City of Mobile Resources</h3>
+			<hr class="fancy"><div class="clearfix"></div>
 				<p><a href="https://www.municode.com/library/al/mobile/codes/code_of_ordinances" class="res-link" target="_blank">City of Mobile – Code of Ordinances</a></p>
 				<!-- <a href="http://www.mobilepd.org/records_reports.php" class="res-link" target="_blank" class="broken_link">City of Mobile PD</a> -->
 		</div>
 
 		<div class="list">
 			<h3>City of Atmore Resources</h3>
+			<hr class="fancy"><div class="clearfix"></div>
 				<p><a href="http://www.cityofatmore.com/content.asp?id=138666" class="res-link" target="_blank">City of Atmore PD</a></p>
 				<p><a href="https://www.municode.com/library/al/atmore/codes/code_of_ordinances" class="res-link" target="_blank">City of Atmore – Code of Ordinances</a></p>
 		</div>
