--- a/app/views/static_pages/motorcycle-accidents.html.erb
+++ b/app/views/static_pages/motorcycle-accidents.html.erb
@@ -5,26 +5,44 @@
 <div class="header-wrap">
 	<div class="cst-header">
 		<h1><span>Motorcycle</span> Accident Claims</h1>
-		<!-- <h4>Motorcycle Accident Claims &amp; Serious Injuries in Southern Alabama</h4> -->
 	</div>
 </div>
 <div class="clearfix"></div>
 
-<!-- <div class="banner"> -->
-<div class="topic-boxes">
-	<h3>Motorcycle Accident Claims &amp; Serious Injuries</h3>
-	<div class="b1">
-		<p>Motorcycles are the least protected vehicles on the road, which unfortunately leads to higher injury and death rates than those of traditional motorists. Motorcycle accidents typically result in high medical costs, and demand a successful litigation outcome in order to pay for medical expenses.</p>
-	</div>
+<div class="ms1">
+	<div class="container">
+		<div class="col-md-6 left">
+			<!-- <%= image_tag('motorcycle.jpg', class: 'img-responsive', alt: '') %>  -->
+				<h4>Accident Attorney, Noel B. Leonard understands firsthand how important motorcycle safety is.</h4>
+				<p>Motorcycles are the least protected vehicles on the road. Unfortunately, this leads to a higher average of injury and death rates than those of traditional motorists.
+				Motorcycle accidents typically result in high medical expenses, that often times, can only be paid after a successful litigation outcome.</p>
+				<p>If you or a loved one has been in a motorcycle accident, you need an attorney who understands your pain, and has the ability to deliver the legal results to help you recover.</p>
+		</div>
 
-	<div class="b2">
-		<p>If you or a loved one has been in a motorcycle accident in Alabama, you need an accident attorney who understands your pain, and can deliver the legal results you need to recover. In the turbulent aftermath of a devastating motorcycle accident, you need an attorney you can trust to fight for you.</p>
-	</div>
-
-	<div class="b3">
-		<p>As an avid motorcycle enthusiast, Noel B. Leonard understands, and can accommodate this need. His attorney fees will not exceed the amount awarded from a successful lawsuit, thus ensuring that you have the funds needed to repair your body and your life.</p>
+		<div class="col-md-4 col-md-offset-1">
+			<div class="sidebar">
+				<!-- <p>Contact Alabama accident attorney, Noel B. Leonard to schedule a consultation, or call (251) 597-0695 if you live in the city of Foley or Baldwin, Mobile or Escambia Counties, and have been in a motorcycle accident.</p> -->
+				<p>As an avid motorcycle enthusiast, Noel B. Leonard understands this need, and works to accommodate it.</p>
+				<hr class="fancy">
+				<p>His attorney fees will not exceed the amount awarded from a successful lawsuit, thus ensuring that you have the funds needed to repair your body and your life.</p>
+				<hr class="fancy">
+				<h4>You can trust Noel B. Leonard to fight for you.</h4>
+			</div>
+		</div>
 	</div>
 </div>
+
+<div class="ms2">
+	<div class="overlay">
+		<div class="container">
+			<p>If you live in Baldwin, Mobile, or Escambia County, and you or a loved one has been injured in a motorcycle accident in Alabama, contact accident attorney, Noel B. Leonard today.</p>
+			<hr class="fancy">
+			<p>Learn more about your rights, and start moving forward.<br> Fill out our <%=link_to "case evaluation form", contact_path %>, or call now to schedule a consultation.<br>
+			<%= number_to_phone(2519438638, delimiter: '-', class: 'call-link') %></p>
+		</div>
+	</div>
+</div>
+<!--
 
 <section class="content">
 	<div class="text-box">
@@ -32,29 +50,9 @@
 		<p>In the event that you are in an accident caused by a negligent driver, it is essential that you have as much protection as possible, to prevent life-threatening injuries.</p>
 		<p>While a helmet is no guarantee that a life will be saved, in many cases a helmet has been the difference between life and death.</p>
 	</div>
+</section> -->
+
 
 
 
 		<!-- <h5>Contact Alabama accident attorney, Noel B. Leonard to schedule a consultation, or call (251) 597-0695 if you live in the city of Foley or Baldwin, Mobile or Escambia Counties, and have been in a motorcycle accident.</h5> -->
-	</div>
-
-</section>
-
-
-
-
-
-<!--
-
-	<div class="col-md-6">
-		<h4>As an avid motorcycle enthusiast, Noel B. Leonard understands firsthand how important motorcycle safety is.</h4>
-		<p>We counsel all motorcyclists to wear a helmet, and follow essential safety precautions on the road, as there are many dangerous and negligent drivers out there.
-			In the event that you are in an accident caused by a negligent driver, it is essential that you have as much protection as possible, to prevent life-threatening injuries.
-			While a helmet is no guarantee that a life will be saved, in many cases a helmet has been the difference between life and death.
-		</p>
-	</div>
-		<h5>Contact Alabama accident attorney, Noel B. Leonard to schedule a consultation, or call (251) 597-0695 if you live in the city of Foley or Baldwin, Mobile or Escambia Counties, and have been in a motorcycle accident.</h5>
-	</div>
-
-</section>
- -->
